2016-12-13  Richard Biener  <rguenther@suse.de>

PR tree-optimization/78699
	* tree-vect-data-refs.c (vect_analyze_group_access_1): Limit
	group size.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@243599 138bc75d-0d04-0410-961f-82ee72b054a4